chore: replace giuongbocda logo format and update product descriptions
- Replace logo.jpg with logo.png for better image quality
- Update logo image reference in index.html header
- Add periods to end of product specification descriptions
- Standardize punctuation in bed dimensions and material details
- Improve consistency in product feature descriptions with proper sentence endings

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header">
       <div class="container">
         <a href="#" class="logo">
-          <img src="assets/images/giuongbocda/logo.jpg" alt="Hana Bedding" />
+          <img src="assets/images/giuongbocda/logo.png" alt="Hana Bedding" />
         </a>
         <div class="header-title-mobile">Giường Bọc Da Cao Cấp</div>
         <div class="header-right">
@@ -637,13 +637,13 @@
                 style="color: var(--text); line-height: 1.8; padding-left: 32px"
               >
                 <p style="margin: 0 0 8px 0">
-                  <strong>Độ dày:</strong> Phần bọc đệm dày 5cm
+                  <strong>Độ dày:</strong> Phần bọc đệm dày 5cm.
                 </p>
                 <p style="margin: 0 0 8px 0"><strong>Kích thước:</strong></p>
                 <ul style="margin: 0; padding-left: 20px">
-                  <li>Chiều cao thành giường: 30cm | Đầu giường: 100cm</li>
-                  <li>Chiều ngang: 1m / 1m2 / 1m4 / 1m6 / 1m8 / 2m / 2m2</li>
-                  <li>Khung giường: 34mm</li>
+                  <li>Chiều cao thành giường: 30cm | Đầu giường: 100cm.</li>
+                  <li>Chiều ngang: 1m / 1m2 / 1m4 / 1m6 / 1m8 / 2m / 2m2.</li>
+                  <li>Khung giường: 34mm.</li>
                 </ul>
               </div>
             </div>
@@ -667,10 +667,10 @@
                 style="color: var(--text); line-height: 1.8; padding-left: 32px"
               >
                 <p style="margin: 0 0 8px 0">
-                  <strong>Bên ngoài:</strong> Da simili cao cấp chống trầy xước
+                  <strong>Bên ngoài:</strong> Da simili cao cấp chống trầy xước.
                 </p>
                 <p style="margin: 0">
-                  <strong>Bên trong:</strong> Khung gỗ MDF chắc chắn
+                  <strong>Bên trong:</strong> Khung gỗ MDF chắc chắn.
                 </p>
               </div>
             </div>
@@ -695,14 +695,14 @@
               >
                 <p style="margin: 0 0 8px 0">
                   ✨ Thiết kế tinh tế phù hợp nhiều không gian từ hiện đại đến
-                  tân cổ điển
+                  tân cổ điển.
                 </p>
                 <p style="margin: 0 0 8px 0">
-                  💪 Độ bền cao nhờ kết hợp gỗ MDF và da Simili chống trầy
+                  💪 Độ bền cao nhờ kết hợp gỗ MDF và da Simili chống trầy.
                 </p>
                 <p style="margin: 0">
                   🎯 Tùy biến linh hoạt với 7 kích thước từ giường đơn đến
-                  King-size
+                  King-size.
                 </p>
               </div>
             </div>
