--- a/chinh-sach-bao-hanh.html
+++ b/chinh-sach-bao-hanh.html
@@ -22,7 +22,7 @@
       <div class="container">
         <a href="index.html" class="logo">
           <img
-            src="assets/images/giuongbocda/logo.PNG"
+            src="assets/images/giuongbocda/logo.png"
             alt="Hanabedding Logo"
           />
         </a>
