--- a/chinh-sach-giao-lap.html
+++ b/chinh-sach-giao-lap.html
@@ -21,7 +21,7 @@
       <div class="container">
         <a href="index.html" class="logo">
           <img
-            src="assets/images/giuongbocda/logo.PNG"
+            src="assets/images/giuongbocda/logo.png"
             alt="Hanabedding Logo"
           />
         </a>
