--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
         <div class="product-display">
           <!-- LEFT: Images -->
           <div class="product-images">
+            <h3 class="mobile-section-title">Chọn Mẫu</h3>
             <div class="main-product-image">
               <img
                 id="mainProductImage"
