style: rename mobile section title to label and update styles for better responsiveness

--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@
         <div class="product-display">
           <!-- LEFT: Images -->
           <div class="product-images">
-            <h3 class="mobile-section-title">Chọn Mẫu</h3>
             <div class="main-product-image">
               <img
                 id="mainProductImage"
@@ -338,6 +337,7 @@
                 alt="Giường bọc da mẫu sọc dọc màu xám - Hanabedding cao cấp, chống trầy, bảo hành 24 tháng"
               />
             </div>
+            <div class="mobile-section-label">Chọn mẫu:</div>
             <div class="thumbnail-slider-container">
               <div class="thumbnail-slider" id="thumbnailSlider">
                 <div class="thumbnail-images" id="thumbnailImages">
