--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preload" href="assets/css/style.css" as="style" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preload" href="assets/css/style.min.css" as="style" />
+    <link rel="stylesheet" href="assets/css/style.min.css" />
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
