--- a/chinh-sach-bao-hanh.html
+++ b/chinh-sach-bao-hanh.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/policy.min.css" />
+    <link rel="stylesheet" href="assets/css/policy.min.css?v=2" />
   </head>
   <body>
     <!-- Header -->
