--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta
+      name="google-site-verification"
+      content="XOyIY5L8vm2Qb0dkHO5SoDsvTJgIsrzohBN6B4dLOzI"
+    />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
