--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       content="XOyIY5L8vm2Qb0dkHO5SoDsvTJgIsrzohBN6B4dLOzI"
     />
     <meta
+      name="facebook-domain-verification"
+      content="w95n3ijuobklozykda1fnhqs9bcse6"
+    />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
