style: update bed size specifications and product images
- Update bed mattress dimensions from 2m to 2m05 length across all size variants
- Increase duvet coverage width from +20cm to +27cm
- Increase duvet coverage length from +15cm to +20cm
- Update fitted sheet dimensions to match new mattress specifications (127cm x 220cm for 1m x 2m05)
- Revise product description to clarify bed frame height range (90cm - 100cm) and duvet coverage details
- Simplify duvet coverage description to indicate +7cm width and +5cm length additions
- Optimize product images for giuongbocda size variants (size_1.jpg and size_2.jpg)
- Improve clarity of product specifications for better customer understanding

--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
                     margin-bottom: 5px;
                   "
                 >
-                  +20cm
+                  +27cm
                 </div>
                 <div style="color: var(--text-muted); font-size: 14px">
                   Phủ bì chiều ngang
@@ -1109,7 +1109,7 @@
                     margin-bottom: 5px;
                   "
                 >
-                  +15cm
+                  +20cm
                 </div>
                 <div style="color: var(--text-muted); font-size: 14px">
                   Phủ bì chiều dài
@@ -1183,7 +1183,7 @@
                 </thead>
                 <tbody>
                   <tr style="border-bottom: 1px solid var(--border)">
-                    <td style="padding: 12px; color: var(--text)">1m x 2m</td>
+                    <td style="padding: 12px; color: var(--text)">1m x 2m05</td>
                     <td
                       style="
                         padding: 12px;
@@ -1191,7 +1191,7 @@
                         color: var(--text);
                       "
                     >
-                      100cm x 200cm
+                      100cm x 205cm
                     </td>
                     <td
                       style="
@@ -1201,11 +1201,11 @@
                         font-weight: 600;
                       "
                     >
-                      120cm x 215cm
+                      127cm x 220cm
                     </td>
                   </tr>
                   <tr style="border-bottom: 1px solid var(--border)">
-                    <td style="padding: 12px; color: var(--text)">1m2 x 2m</td>
+                    <td style="padding: 12px; color: var(--text)">1m2 x 2m05</td>
                     <td
                       style="
                         padding: 12px;
@@ -1213,7 +1213,7 @@
                         color: var(--text);
                       "
                     >
-                      120cm x 200cm
+                      120cm x 205cm
                     </td>
                     <td
                       style="
@@ -1223,11 +1223,11 @@
                         font-weight: 600;
                       "
                     >
-                      140cm x 215cm
+                      147cm x 220cm
                     </td>
                   </tr>
                   <tr style="border-bottom: 1px solid var(--border)">
-                    <td style="padding: 12px; color: var(--text)">1m4 x 2m</td>
+                    <td style="padding: 12px; color: var(--text)">1m4 x 2m05</td>
                     <td
                       style="
                         padding: 12px;
@@ -1235,7 +1235,7 @@
                         color: var(--text);
                       "
                     >
-                      140cm x 200cm
+                      140cm x 205cm
                     </td>
                     <td
                       style="
@@ -1245,7 +1245,7 @@
                         font-weight: 600;
                       "
                     >
-                      160cm x 215cm
+                      167cm x 220cm
                     </td>
                   </tr>
                   <tr
@@ -1261,7 +1261,7 @@
                         font-weight: 600;
                       "
                     >
-                      1m6 x 2m ⭐
+                      1m6 x 2m05 ⭐
                     </td>
                     <td
                       style="
@@ -1270,7 +1270,7 @@
                         color: var(--text);
                       "
                     >
-                      160cm x 200cm
+                      160cm x 205cm
                     </td>
                     <td
                       style="
@@ -1280,11 +1280,11 @@
                         font-weight: 600;
                       "
                     >
-                      180cm x 215cm
+                      187cm x 220cm
                     </td>
                   </tr>
                   <tr style="border-bottom: 1px solid var(--border)">
-                    <td style="padding: 12px; color: var(--text)">1m8 x 2m</td>
+                    <td style="padding: 12px; color: var(--text)">1m8 x 2m05</td>
                     <td
                       style="
                         padding: 12px;
@@ -1292,7 +1292,7 @@
                         color: var(--text);
                       "
                     >
-                      180cm x 200cm
+                      180cm x 205cm
                     </td>
                     <td
                       style="
@@ -1302,11 +1302,11 @@
                         font-weight: 600;
                       "
                     >
-                      200cm x 215cm
+                      207cm x 220cm
                     </td>
                   </tr>
                   <tr style="border-bottom: 1px solid var(--border)">
-                    <td style="padding: 12px; color: var(--text)">2m x 2m</td>
+                    <td style="padding: 12px; color: var(--text)">2m x 2m05</td>
                     <td
                       style="
                         padding: 12px;
@@ -1314,7 +1314,7 @@
                         color: var(--text);
                       "
                     >
-                      200cm x 200cm
+                      200cm x 205cm
                     </td>
                     <td
                       style="
@@ -1324,11 +1324,11 @@
                         font-weight: 600;
                       "
                     >
-                      220cm x 215cm
+                      227cm x 220cm
                     </td>
                   </tr>
                   <tr>
-                    <td style="padding: 12px; color: var(--text)">2m2 x 2m</td>
+                    <td style="padding: 12px; color: var(--text)">2m2 x 2m05</td>
                     <td
                       style="
                         padding: 12px;
@@ -1336,7 +1336,7 @@
                         color: var(--text);
                       "
                     >
-                      220cm x 200cm
+                      220cm x 205cm
                     </td>
                     <td
                       style="
@@ -1346,7 +1346,7 @@
                         font-weight: 600;
                       "
                     >
-                      240cm x 215cm
+                      247cm x 220cm
                     </td>
                   </tr>
                 </tbody>
@@ -1410,8 +1410,8 @@
                     margin: 0;
                   "
                 >
-                  Chiều cao thành giường 30cm, đầu giường 100cm. Phủ bì vượt ra
-                  ngoài lọt lòng: chiều ngang +20cm, chiều dài +15cm.
+                  Chiều cao thành giường 30cm, đầu giường từ 90cm - 100cm. Phủ bì toàn bộ
+                  giường chiều dài thêm <strong>5cm</strong>.
                 </p>
               </div>
             </div>
@@ -1465,7 +1465,7 @@
                   "
                 >
                   Kích thước lọt lòng từ 1m đến 2m2 (7 size). Phủ bì toàn bộ
-                  giường rộng hơn lọt lòng 20cm mỗi bên, dài hơn 15cm.
+                  giường chiều rộng thêm <strong>7cm</strong>.
                 </p>
               </div>
             </div>
